<resources>
    <string name="app_name">Simon Says</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="start">Start</string>
    <string name="start_game">Start Game</string>
    <string name="scores">Scores</string>
    <string name="player_name">Name</string>
    <string name="player_score">Score</string>
    <string name="player_date">Date</string>
    <string name="settings">Settings</string>
    <string name="exit_game">Exit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="current_score">Current Score: %d</string>
    <string name="high_score">High Score: %d</string>
    <string name="simon_turn">It\'s Simons Turn</string>
    <string name="your_turn">It\'s Your Turn</string>
    <string name="press_start">Press Start</string>
    <string name="game_over">Game Over!</string>
    <string name="anonymous">Anonymous</string>
    <string name="enter_name">Enter your name to save your score:</string>
    <string name="sound">Sound: </string>
    <string name="light_duration">Light Duration: </string>
    <string name="highscore_preference">highscore_preference</string>
    <string name="sound_preference">sound_preference</string>
    <string name="duration_preference">duration_preference</string>
    <string name="scores_preference">scores_preference</string>
    <string name="information">Information</string>
    <string name="info">The game consists of the device lighting up one or more buttons in a random order, after which the player must reproduce that order by pressing the buttons. As the game progresses, the number of buttons to be pressed increases.</string>
</resources>
