<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radialgradientback"
    tools:context="app.simonsays.com.simonsays_app.activities.ScoresActivity">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        style="@style/TextAppearance.AppCompat.Title"
        android:text="@string/scores" />

    <RelativeLayout
        android:id="@+id/titlesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@id/titleTv">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_name"
            android:layout_gravity="start"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_score"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_date"
            android:layout_gravity="end"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scoresLV"
        android:layout_below="@+id/titlesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
