<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialogSettingsTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/dialogSettingsTitleTv">

        <TextView
            android:id="@+id/dialogSoundTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/sound"/>

        <ToggleButton
            android:id="@+id/soundToggleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@id/dialogSoundTv"
            android:layout_toEndOf="@+id/dialogSoundTv"/>

        <TextView
            android:id="@+id/dialogDurationTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialogSoundTv"
            android:padding="20dp"
            android:text="@string/light_duration" />

        <NumberPicker
            android:id="@+id/durationPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dialogDurationTv" />
    </RelativeLayout>

</RelativeLayout>