<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radialgradientback"
    tools:context="app.simonsays.com.simonsays_app.activities.GameActivity">


    <ImageButton
        android:id="@+id/infoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#464648"
        android:src="@drawable/info"/>

    <ImageButton
        android:id="@+id/settingsBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#464648"
        android:src="@drawable/settings"/>

    <TextView
        android:textSize="25sp"
        android:layout_marginTop="120dp"
        android:id="@+id/gameStatusTv"
        android:text="@string/press_start"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/greenBtn"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:background="@drawable/green_selector"
        android:layout_toLeftOf="@+id/startBtn"
        android:layout_toStartOf="@+id/startBtn"
        android:layout_marginTop="120dp"/>

    <Button
        android:id="@+id/startBtn"
        android:text="@string/start"
        style="@style/StartStyle"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/greenBtn"
        android:layout_marginTop="100dp"
        android:layout_width="80dp"
        android:layout_height="80dp" />

    <Button
        android:id="@+id/redBtn"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:layout_marginTop="120dp"
        android:layout_toRightOf="@id/startBtn"
        android:layout_toEndOf="@id/startBtn"
        android:background="@drawable/red_selector"/>

    <Button
        android:id="@+id/yellowBtn"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:background="@drawable/yellow_selector"
        android:layout_below="@+id/startBtn"
        android:layout_toRightOf="@+id/startBtn"
        android:layout_toEndOf="@+id/startBtn" />

    <Button
        android:id="@+id/blueBtn"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:layout_below="@id/startBtn"
        android:layout_toLeftOf="@id/startBtn"
        android:layout_toStartOf="@id/startBtn"
        android:background="@drawable/blue_selector"/>


    <TextView
        android:textSize="20sp"
        android:padding="10dp"
        android:id="@+id/highScoreTv"
        android:text="@string/high_score"
        android:gravity="bottom"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <TextView
        android:textSize="20sp"
        android:padding="10dp"
        android:id="@+id/currenScoreTv"
        android:text="@string/current_score"
        android:gravity="bottom"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />


</RelativeLayout>
